[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Object/Ui/ItemUiTemplate/ItemUiTemplate.gd" type="Script" id=2]

[node name="ItemUiTemplate" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 80 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 1024.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 480.0
margin_right = 64.0
margin_bottom = 544.0
texture = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 68.0
margin_right = 106.0
margin_bottom = 1024.0
alignment = 1

[node name="LabelName" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_top = 505.0
margin_right = 38.0
margin_bottom = 519.0
text = "Name"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 1920.0
margin_bottom = 1024.0
size_flags_horizontal = 3
alignment = 1

[node name="LabelDexcription" type="Label" parent="HBoxContainer/VBoxContainer3"]
margin_top = 505.0
margin_right = 1810.0
margin_bottom = 519.0
text = "Descript"
align = 1
